5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1638_2449.log
== TEST (2019-04-08 13:05:30) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:05:44) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.161538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:06:01) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:07:30) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y =< 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.142979
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 11
    if(x,y =< 0):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:07:30) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y =< 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 11
    if(x,y =< 0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:07:36) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y <= 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:07:54) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y <= 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.134208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:09:15) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y <= 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:10:20) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y >= 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.127406
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input("aa:"))
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:02:00) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y >= 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.16295
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:07:04) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y >= 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.182938
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:07:05) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y >= 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:07:30) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.194495
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:09:52) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y > 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:09:55) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))  

if(x,y > 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.175947
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:12) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.159735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:14) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.198546
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:14) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.131264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:14) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.136951
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:15) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.16332
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:15) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.230839
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:15) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.289754
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:16) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.135509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:16) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.444539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:16) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.359933
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:23:16) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print(" Nao tem solucao")
-- EXECUTION TIME:
0.199205
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:25:18) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

if(x = ((c*e)-(b*f))//((a*e)-(b*d)) y = ((a*f)-(c*d))//((a*e)-(b*d)) != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.173947
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 8
    if(x = ((c*e)-(b*f))//((a*e)-(b*d)) y = ((a*f)-(c*d))//((a*e)-(b*d)) != 0):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:25:19) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

if(x = ((c*e)-(b*f))//((a*e)-(b*d)) y = ((a*f)-(c*d))//((a*e)-(b*d)) != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 8
    if(x = ((c*e)-(b*f))//((a*e)-(b*d)) y = ((a*f)-(c*d))//((a*e)-(b*d)) != 0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:26:23) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:"))

x = ((c*e)-(b*f))//((a*e)-(b*d))
y = ((a*f)-(c*d))//((a*e)-(b*d))  

if(x,y != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:27:43) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a,b,c,d,e,f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:27:52) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a,b,c,d,e,f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.196866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:28:23) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a,b,c,d,e,f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:29:22) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:")) 

if(a,b,c,d,e,f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.135682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 9, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:30:20) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:")) 

if(a/b/c/d/e/f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.156596
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 9, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:30:22) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:")) 

if(a/b/c/d/e/f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:30:33) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:")) 

if(a/b/c/d/e/f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x = ((c*e)-(b*f))//((a*e)-(b*d))
ZeroDivisionError: float divmod()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:31:21) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.143761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:22) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:31:22) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.174082
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input("aa:"))
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:31:22) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.126178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:23) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:32:19) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f >= 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.205324
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:32:20) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f >= 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:32:20) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f >= 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.142742
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:32:22) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f >= 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.148987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:32:44) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if(a/b/c/d/e/f >= 0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.175708
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:46:16) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if((a*e)-(b*d) != 0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:46:25) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if((a*e)-(b*d) != 0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.176381
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:46:56) 
-- CODE:
a = int(input("aa:"))
b = int(input("bb:"))
c = int(input("cc:"))
d = int(input("dd:"))
e = int(input("ee:")) 
f = int(input("ff:")) 

if((a*e)-(b*d) != 0):
	x = ((c*e)-(b*f))//((a*e)-(b*d))
	y = ((a*f)-(c*d))//((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:47:28) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:")) 

if((a*e)-(b*d) != 0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:47:32) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:")) 

if((a*e)-(b*d) != 0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.172724
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:07:33) 
-- CODE:
a = float(input("aa:"))
b = float(input("bb:"))
c = float(input("cc:"))
d = float(input("dd:"))
e = float(input("ee:")) 
f = float(input("ff:")) 

if((a*e)-(b*d) != 0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d)) 
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.125615
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
